--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap');
-
-/* @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Milonga&display=swap');
 
 
 :root{
@@ -15,8 +12,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: 'Lobster', cursive;
-    /* font-family: 'josefin sans' sans-serif; */
+    font-family: 'Milonga', cursive; 
 }
 
 /* javaScript functionalities */
@@ -398,14 +394,6 @@ body{
 }
 
 @media screen and (max-width: 1048px) and (min-width: 360px){
-    body{
-        min-height: 900px;
-        width: 20px;
-    }
-
     
-.info_box{
-    width: 20px;
-}
 }
 
