--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ body{
     background: url(./images/fu.png);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
 }
 
 .start_btn,
@@ -96,8 +95,8 @@ body{
 }
 
 .info_box{
-    min-width: 540px;
-    background: #858585;
+    max-width: 540px;
+    background: url(./images/fu.png);
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
     opacity: 0;
@@ -170,9 +169,6 @@ body{
     background-color: #007bff;
 }
 
-.quiz_box header.title{
-    color: red;
-}
 
 /* Quiz Box Starts Here */
 
@@ -190,13 +186,14 @@ body{
     z-index: 99;
     height: 70px;
     padding: 0 30px;
-    background: #858585;
+    background: url(./images/fu.png);
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 5px 5px 0 0;
     box-shadow: 0px 0px 6px 1px #000, 0px 0px 25px #858585;
 }
+
 
 .quiz_box header .title{
     font-size: 20px;
@@ -213,6 +210,11 @@ body{
     border: 1px solid #4c9bf0bd;
     border-radius: 5px;
     padding: 0 8px;
+}
+
+
+.quiz_box .time_text{
+    font-weight: 700;
 }
 
 .quiz_box header .timer .timer_sec{
@@ -237,7 +239,7 @@ body{
 
 .quiz_box section{
     padding: 25px 30px 20px 30px;
-    background: #858585;
+    background: url(./images/fu.png);
     box-shadow: 0px 0px 6px 1px #000, 0px 0px 25px #858585;
     user-select: none;
 }
@@ -299,10 +301,12 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #858585;
-    border-radius: inherit;
+    background: url(./images/fu.png);
+    border-radius: 5px;
     box-shadow: 0px 0px 6px 1px #000, 0px 0px 25px #858585;
 }
+
+
 
 .total_que span {
     display: flex;
@@ -338,7 +342,7 @@ body{
 /* RESULT BOX STARTS HERE */
 
 .result_box{
-    background: #858585;
+    background: url(./images/fu.png);
     width: 450px;
     padding: 25px 30px;
     border-radius: 5px;
@@ -393,7 +397,50 @@ body{
     transition: all 0.3s ease-in-out;
 }
 
-@media screen and (max-width: 1048px) and (min-width: 360px){
+@media screen and (max-width: 768px){
+    body{
+       height: 100vh;
+    }               
+    .info_box,
+    .quiz_box,
+    .result_box{
+        max-width: 90%;
+    }
     
-}
+    .info_box .info_title{
+        font-size: 20px;
+        font-weight: 600;
+    }
+    
+    .info_box .info_list .info{
+        font-size: 15px;
+        font-weight: 600;
+    }
+    
+    .quiz_box header .title{
+        font-size: 15px;
+    }
+    
+    .quiz_box header .timer .timer_sec{
+        font-size: 12px;
+    }
+    .quiz_box .time_text{
+        font-size: 12px;
+        font-weight: 700;
+    }
+    
+    .quiz_box section .que_text{
+        font-size: 15px;
+        font-weight: 700;
+    }
+    
+    .quiz_box section .option_list .option{
+        font-size: 12.5px;
+        font-weight: 700;
+    }
+    
+    }
+    
+    
+
 
