--- a/style.css
+++ b/style.css
@@ -88,6 +88,11 @@ body{
     box-shadow: 0px 0px 6px 1px #000, 0px 0px 25px #858585;
 }
 
+#myText{
+    border-radius: 3px;
+    padding: 5px 15px;
+}
+
 .info_box{
     max-width: 540px;
     background: url(./images/fu.png);
