--- a/style.css
+++ b/style.css
@@ -83,13 +83,30 @@ body{
     background: whitesmoke;
     background-size: cover;
     cursor: pointer;
+    margin-left: 7px;
+    margin-bottom: 10px;
 }
 .start_btn button:hover{
     box-shadow: 0px 0px 6px 1px #000, 0px 0px 25px #858585;
 }
 
+.start_btn{
+    border-radius: 5px;
+    min-width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #myText{
     border-radius: 3px;
+    padding: 5px 15px;
+}
+
+label{
+    background: #007bff;
+    margin-top: 15px;
+    border-radius: 5px;
     padding: 5px 15px;
 }
 
